[package]
name = "rust-tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.0"
wasm-bindgen = "0.2.83"
gloo = "0.8"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'DragEvent',
  'DataTransfer',
  'TouchEvent',
  'TouchList',
  'Touch',
  'Window'
]